--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -7258,6 +7258,21 @@ repositories:
       url: https://github.com/SICKAG/sick_safetyscanners2_interfaces.git
       version: master
     status: developed
+  sick_safetyscanners_base:
+    doc:
+      type: git
+      url: https://github.com/SICKAG/sick_safetyscanners_base.git
+      version: ros2
+    release:
+      tags:
+        release: release/rolling/{package}/{version}
+      url: https://github.com/ros2-gbp/sick_safetyscanners_base-release.git
+      version: 1.0.3-1
+    source:
+      type: git
+      url: https://github.com/SICKAG/sick_safetyscanners_base.git
+      version: ros2
+    status: developed
   sick_safevisionary_base:
     doc:
       type: git
