--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -7352,7 +7352,7 @@ python3-nmcli-pip:
     pip:
       depends: [network-manager]
       packages: [nmcli]
-python3-noisereduce:
+python3-noisereduce-pip:
   '*':
     pip:
       packages: [noisereduce]
