added developed status of conflict which got lost

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -7682,6 +7682,7 @@ repositories:
       type: git
       url: https://github.com/SICKAG/sick_safetyscanners_base.git
       version: ros2
+    status: developed
   sick_safetyscanners2_interfaces:
     doc:
       type: git
