--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -3997,6 +3997,11 @@ repositories:
       type: git
       url: https://github.com/neobotix/neo_nav2_bringup.git
       version: iron
+    release:
+      tags:
+        release: release/iron/{package}/{version}
+      url: https://github.com/ros2-gbp/neo_nav2_bringup-release.git
+      version: 1.1.1-1
     source:
       type: git
       url: https://github.com/neobotix/neo_nav2_bringup.git
