--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -6051,7 +6051,7 @@ repositories:
     doc:
       type: git
       url: https://gitlab.com/ApexAI/performance_test.git
-      version: 1.2.1
+      version: master
     release:
       tags:
         release: release/humble/{package}/{version}
