--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -4831,7 +4831,7 @@ repositories:
     doc:
       type: git
       url: https://gitlab.com/ApexAI/performance_test.git
-      version: 1.2.1
+      version: master
     release:
       tags:
         release: release/jazzy/{package}/{version}
