--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -4539,7 +4539,7 @@ repositories:
     doc:
       type: git
       url: https://gitlab.com/ApexAI/performance_test.git
-      version: 1.2.1
+      version: master
     release:
       tags:
         release: release/iron/{package}/{version}
