--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -4485,7 +4485,7 @@ repositories:
     doc:
       type: git
       url: https://gitlab.com/ApexAI/performance_test.git
-      version: 1.2.1
+      version: master
     release:
       tags:
         release: release/rolling/{package}/{version}
