libfranka: 0.13.6-1 in 'humble/distribution.yaml' [bloom]

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -4026,6 +4026,11 @@ repositories:
       version: master
     status: maintained
   libfranka:
+    release:
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/frankaemika/libfranka-release.git
+      version: 0.13.6-1
     source:
       type: git
       url: https://github.com/frankaemika/libfranka.git
