Added python3 PrusaLinkPy

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -7960,6 +7960,10 @@ python3-protobuf:
     '*': [python3-protobuf]
     '7': null
   ubuntu: [python3-protobuf]
+python3-prusalinkpy-pip:
+  '*':
+    pip:
+      packages: [PrusaLinkPy]
 python3-psutil:
   alpine: [py3-psutil]
   arch: [python-psutil]
