--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -2838,7 +2838,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/CCNYRoboticsLab/imu_tools.git
-      version: rolling
+      version: jazzy
     release:
       packages:
       - imu_complementary_filter
@@ -2853,7 +2853,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/CCNYRoboticsLab/imu_tools.git
-      version: rolling
+      version: jazzy
     status: maintained
   interactive_marker_twist_server:
     doc:
