add simple_grasping to rosdistro

--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -7338,6 +7338,11 @@ repositories:
       url: https://github.com/DLu/simple_actions.git
       version: main
     status: developed
+  simple_grasping:
+    source:
+      type: git
+      url: https://github.com/mikeferguson/simple_grasping.git
+      version: ros2
   simple_launch:
     doc:
       type: git
