rosdep: add several nixos keys

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -3808,6 +3808,7 @@ libglm-dev:
   debian: [libglm-dev]
   fedora: [glm-devel]
   gentoo: [media-libs/glm]
+  nixos: [glm]
   rhel: [glm-devel]
   ubuntu: [libglm-dev]
 libglui-dev:
@@ -8265,6 +8266,7 @@ sdl2-image:
   arch: [sdl2_image]
   debian: [libsdl2-image-dev]
   fedora: [SDL2_image-devel]
+  nixos: [SDL2_image]
   rhel:
     '7': [SDL2_image-devel]
   ubuntu: [libsdl2-image-dev]
