Added adi_3dtof_image_stitching package

--- a/noetic/distribution.yaml
+++ b/noetic/distribution.yaml
@@ -75,6 +75,11 @@ repositories:
       url: https://github.com/ros/actionlib.git
       version: noetic-devel
     status: maintained
+  adi_3dtof_image_stitching:
+    source:
+      type: git
+      url: https://github.com/analogdevicesinc/adi_3dtof_image_stitching.git
+      version: v1.1.0
   adi_tmc_coe:
     doc:
       type: git
