Edited version field

--- a/noetic/distribution.yaml
+++ b/noetic/distribution.yaml
@@ -79,7 +79,8 @@ repositories:
     source:
       type: git
       url: https://github.com/analogdevicesinc/adi_3dtof_image_stitching.git
-      version: v1.1.0
+      version: noetic-devel
+    status: maintained
   adi_tmc_coe:
     doc:
       type: git
