--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -1582,6 +1582,21 @@ repositories:
       url: https://github.com/stack-of-tasks/eigenpy.git
       version: devel
     status: maintained
+  ess_imu_driver2:
+    doc:
+      type: git
+      url: https://github.com/cubicleguy/ess_imu_driver2.git
+      version: jazzy
+    release:
+      tags:
+        release: release/jazzy/{package}/{version}
+      url: https://github.com/ros2-gbp/ess_imu_driver2-release.git
+      version: 2.0.2-1
+    source:
+      type: git
+      url: https://github.com/cubicleguy/ess_imu_driver2.git
+      version: jazzy
+    status: maintained
   etsi_its_messages:
     doc:
       type: git
