inuitive-camera-ros2: 2.07.81-1 in 'humble/distribution.yaml' [bloom]

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -3471,6 +3471,14 @@ repositories:
       url: https://github.com/ros-visualization/interactive_markers.git
       version: humble
     status: maintained
+  inuitive-camera-ros2:
+    release:
+      packages:
+      - inuros2
+      tags:
+        release: release/humble/{package}/{version}
+      url: git@bitbucket.org:inuitive/inuros2/branch/InuSW-inuitive-camera-humble.git
+      version: 2.07.81-1
   irobot_create_msgs:
     release:
       tags:
