--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -2232,15 +2232,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/Ikerlan-KER/extrinsic_calibrator.git
-      version: v1.0
-    release:
-      packages:
-      - extrinsic_calibrator_core
-      - extrinsic_calibrator_examples
-      tags:
-        release: release/humble/{package}/{version}
-      url: https://github.com/Ikerlan-KER/extrinsic_calibrator/releases/tag/v1.0
-      version: v1.0
+      version: humble
     source:
       type: git
       url: https://github.com/Ikerlan-KER/extrinsic_calibrator.git
