--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -826,6 +826,11 @@ repositories:
       type: git
       url: https://github.com/tesseract-robotics/boost_plugin_loader.git
       version: main
+  boost_sml_vendor:
+    source:
+      type: git
+      url: https://github.com/nobleo/boost_sml_vendor.git
+      version: main
   camera_aravis2:
     doc:
       type: git
