--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -7255,7 +7255,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-sports/rqt_image_overlay.git
-      version: rolling
+      version: jazzy
     release:
       packages:
       - rqt_image_overlay
@@ -7267,7 +7267,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros-sports/rqt_image_overlay.git
-      version: rolling
+      version: jazzy
     status: developed
   rqt_image_view:
     doc:
