--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -7255,7 +7255,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-sports/rqt_image_overlay.git
-      version: rolling
+      version: jazzy
     release:
       packages:
       - rqt_image_overlay
@@ -7263,11 +7263,11 @@ repositories:
       tags:
         release: release/jazzy/{package}/{version}
       url: https://github.com/ros2-gbp/rqt_image_overlay-release.git
-      version: 0.3.1-4
+      version: 0.4.0-1
     source:
       type: git
       url: https://github.com/ros-sports/rqt_image_overlay.git
-      version: rolling
+      version: jazzy
     status: developed
   rqt_image_view:
     doc:
