ptz_action_server: 2.0.3-1 in 'jazzy/distribution.yaml' [bloom]

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -5221,6 +5221,23 @@ repositories:
       url: https://github.com/Simple-Robotics/proxsuite.git
       version: devel
     status: developed
+  ptz_action_server:
+    doc:
+      type: git
+      url: https://github.com/clearpathrobotics/ptz_action_server.git
+      version: ros2
+    release:
+      packages:
+      - ptz_action_server_msgs
+      tags:
+        release: release/jazzy/{package}/{version}
+      url: https://github.com/clearpath-gbp/ptz_action_server-release.git
+      version: 2.0.3-1
+    source:
+      type: git
+      url: https://github.com/clearpathrobotics/ptz_action_server.git
+      version: ros2
+    status: maintained
   py_binding_tools:
     release:
       tags:
