camera_info_manager_py: 1.0.0-1 in 'humble/distribution.yaml' [bloom]

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -1075,6 +1075,21 @@ repositories:
       url: https://github.com/FraunhoferIOSB/camera_aravis2.git
       version: main
     status: maintained
+  camera_info_manager_py:
+    doc:
+      type: git
+      url: https://github.com/clearpathrobotics/camera_info_manager_py.git
+      version: ros2
+    release:
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/clearpath-gbp/camera_info_manager_py-release.git
+      version: 1.0.0-1
+    source:
+      type: git
+      url: https://github.com/clearpathrobotics/camera_info_manager_py.git
+      version: ros2
+    status: maintained
   camera_ros:
     release:
       tags:
