--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -9037,6 +9037,12 @@ wayland-dev:
   openembedded: [wayland@openembedded-core]
   rhel: [wayland-devel, wayland-protocols-devel]
   ubuntu: [libwayland-dev, wayland-protocols]
+webp:
+  debian: [webp]
+  osx:
+    homebrew:
+      packages: [webp]
+  ubuntu: [webp]
 wget:
   arch: [wget]
   debian: [wget]
