--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -7271,6 +7271,10 @@ python3-myst-parser-pip:
   ubuntu:
     pip:
       packages: [myst-parser]
+python3-nanobind-pip:
+  '*':
+    pip:
+      packages: [nanobind]
 python3-natsort:
   debian: [python3-natsort]
   fedora: [python3-natsort]
