ros2_controllers: 3.27.0-1 in 'iron/distribution.yaml' [bloom]

--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -6004,6 +6004,7 @@ repositories:
       - joint_state_broadcaster
       - joint_trajectory_controller
       - pid_controller
+      - pose_broadcaster
       - position_controllers
       - range_sensor_broadcaster
       - ros2_controllers
@@ -6016,7 +6017,7 @@ repositories:
       tags:
         release: release/iron/{package}/{version}
       url: https://github.com/ros2-gbp/ros2_controllers-release.git
-      version: 3.26.3-1
+      version: 3.27.0-1
     source:
       type: git
       url: https://github.com/ros-controls/ros2_controllers.git
