dep: libwebp-tools: Renamed from 'webp' per suggestion https://github.com/ros/rosdistro/pull/43326#issuecomment-2452306585
Signed-off-by: Isaac Saito <iisaac.saito@gmail.com>

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -6535,6 +6535,16 @@ libwebp-dev:
   nixos: [libwebp]
   openembedded: [libwebp@openembedded-core]
   ubuntu: [libwebp-dev]
+libwebp-tools:
+  alpine: [libwebp-tools]
+  debian: [webp]
+  fedora: [libwebp-tools]
+  opensuse: [libwebp-tools]
+  osx:
+    homebrew:
+      packages: [webp]
+  rhel: [libwebp-tools]
+  ubuntu: [webp]
 libwebsocketpp-dev:
   arch: [websocketpp]
   debian: [libwebsocketpp-dev]
@@ -9037,12 +9047,6 @@ wayland-dev:
   openembedded: [wayland@openembedded-core]
   rhel: [wayland-devel, wayland-protocols-devel]
   ubuntu: [libwayland-dev, wayland-protocols]
-webp:
-  debian: [webp]
-  osx:
-    homebrew:
-      packages: [webp]
-  ubuntu: [webp]
 wget:
   arch: [wget]
   debian: [wget]
