dep: libwebp-tools: Fix rhel
Co-authored-by: Scott K Logan <logans@cottsay.net>

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -6543,7 +6543,9 @@ libwebp-tools:
   osx:
     homebrew:
       packages: [webp]
-  rhel: [libwebp-tools]
+  rhel:
+    '*': [libwebp-tools]
+    '8': null
   ubuntu: [webp]
 libwebsocketpp-dev:
   arch: [websocketpp]
