Update libosmium value for libosmium2-dev

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -7527,10 +7527,10 @@ osm2pgsql:
   ubuntu: [osm2pgsql]
 osmium:
   arch: [libosmium]
-  debian: [libosmium-dev]
+  debian: [libosmium2-dev]
   fedora: [libosmium-devel]
   nixos: [libosmium]
-  ubuntu: [libosmium-dev]
+  ubuntu: [libosmium2-dev]
 pandoc:
   arch: [pandoc-cli]
   debian: [pandoc]
