Add JSONWebToken rosdep rule for Python3
Signed-off-by: Michel Hidalgo <mhidalgo@theaiinstitute.com>

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -6798,6 +6798,17 @@ python3-jupyros-pip:
   ubuntu:
     pip:
       packages: [jupyros]
+python3-jwt:
+  alpine: [py3-jwt]
+  arch: [python-pyjwt]
+  debian: [python3-jwt]
+  fedora: [python3-jwt]
+  gentoo: [dev-python/pyjwt]
+  nixos: [python3Packages.pyjwt]
+  opensuse: [python3-PyJWT]
+  rhel:
+    '9': [python3-jwt]
+  ubuntu: [python3-jwt]
 python3-kitchen:
   arch: [python-kitchen]
   debian: [python3-kitchen]
