Add cli11 rosdep rule
Signed-off-by: Michel Hidalgo <mhidalgo@theaiinstitute.com>

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -591,6 +591,16 @@ clangd:
   opensuse: [clang]
   rhel: [clang-tools-extra]
   ubuntu: [clangd]
+cli11:
+  arch: [cli11]
+  debian: [libcli11-dev]
+  fedora: [cli11-devel]
+  gentoo: [dev-cpp/cli11]
+  nixos: [cli11]
+  rhel: [cli11-devel]
+  ubuntu:
+    '*': [libcli11-dev]
+    'focal': null
 cmake:
   alpine: [cmake]
   arch: [cmake]
