--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -7216,6 +7216,21 @@ muparser:
   nixos: [muparser]
   opensuse: [muparser-devel]
   ubuntu: [libmuparser-dev]
+nanobind-dev:
+  arch:
+    pacman:
+      packages: [nanobind]
+  debian: [nanobind-dev]
+  freebsd: [nanobind]
+  ubuntu:
+    noble: [nanobind-dev]
+    oracular: [nanobind-dev]
+    "*":
+      pip:
+        packages: [nanobind]
+  "*":
+    pip:
+      packages: [nanobind]
 nanoflann:
   debian:
     '*': [libnanoflann-dev]
