--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -9072,6 +9072,8 @@ python3-retrying:
     pip:
       packages: [retrying]
   ubuntu: [python3-retrying]
+python3-rich:
+  ubuntu: [python3-rich]
 python3-river-pip:
   debian:
     pip:
