Add other distros

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -9073,6 +9073,12 @@ python3-retrying:
       packages: [retrying]
   ubuntu: [python3-retrying]
 python3-rich:
+  debian: [python3-rich]
+  fedora: [python3-rich]
+  gentoo: [rich]
+  osx:
+    pip:
+      packages: [rich]
   ubuntu: [python3-rich]
 python3-river-pip:
   debian:
