--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -9079,7 +9079,11 @@ python3-rich:
   osx:
     pip:
       packages: [rich]
-  ubuntu: [python3-rich]
+  ubuntu:
+    '*': [python3-rich]
+    focal:
+      pip:
+        packages: [rich]
 python3-river-pip:
   debian:
     pip:
