--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -7080,6 +7080,16 @@ python3-meson-pip:
   ubuntu:
     pip:
       packages: [meson]
+python3-minijinja-pip:
+  debian:
+    pip:
+      packages: [minijinja]
+  osx:
+    pip:
+      packages: [minijinja]
+  ubuntu:
+    pip:
+      packages: [minijinja]
 python3-minimalmodbus-pip:
   debian:
     pip:
