--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -7080,16 +7080,29 @@ python3-meson-pip:
   ubuntu:
     pip:
       packages: [meson]
-python3-minijinja-pip:
+python3-minijinja:
   debian:
-    pip:
-      packages: [minijinja]
+    '*': [librust-minijinja-dev]
+    bookworm:
+      pip:
+        packages: [minijinja]
+    bullseye:
+      pip:
+        packages: [minijinja]
+    buster:
+      pip:
+        packages: [minijinja]
   osx:
     pip:
       packages: [minijinja]
   ubuntu:
-    pip:
-      packages: [minijinja]
+    '*': [librust-minijinja-dev]
+    jammy:
+      pip:
+        packages: [minijinja]
+    focal:
+      pip:
+        packages: [minijinja]
 python3-minimalmodbus-pip:
   debian:
     pip:
