--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -9079,6 +9079,9 @@ python3-rich:
   osx:
     pip:
       packages: [rich]
+  rhel:
+    '*': [python3-rich]
+    '8': null
   ubuntu:
     '*': [python3-rich]
     focal:
