--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -7103,6 +7103,9 @@ python3-minijinja:
     focal:
       pip:
         packages: [minijinja]
+    noble:
+      pip:
+        packages: [minijinja]
 python3-minimalmodbus-pip:
   debian:
     pip:
