--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -7877,6 +7877,7 @@ repositories:
       - joint_state_broadcaster
       - joint_trajectory_controller
       - pid_controller
+      - pose_broadcaster
       - position_controllers
       - range_sensor_broadcaster
       - ros2_controllers
@@ -7889,7 +7890,7 @@ repositories:
       tags:
         release: release/humble/{package}/{version}
       url: https://github.com/ros2-gbp/ros2_controllers-release.git
-      version: 2.37.3-1
+      version: 2.38.0-1
     source:
       type: git
       url: https://github.com/ros-controls/ros2_controllers.git
