--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -7217,9 +7217,7 @@ muparser:
   opensuse: [muparser-devel]
   ubuntu: [libmuparser-dev]
 nanobind-dev:
-  arch:
-    pacman:
-      packages: [nanobind]
+  arch: [nanobind]
   debian: [nanobind-dev]
   freebsd: [nanobind]
   ubuntu:
