--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -7218,7 +7218,11 @@ muparser:
   ubuntu: [libmuparser-dev]
 nanobind-dev:
   arch: [nanobind]
-  debian: [nanobind-dev]
+  debian:
+    '*': [nanobind-dev]
+    bookworm:
+      pip:
+        packages: [nanobind]
   freebsd: [nanobind]
   ubuntu:
     noble: [nanobind-dev]
