--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -7225,9 +7225,11 @@ nanobind-dev:
         packages: [nanobind]
   freebsd: [nanobind]
   ubuntu:
-    noble: [nanobind-dev]
-    oracular: [nanobind-dev]
-    "*":
+    '*': [nanobind-dev]
+    focal:
+      pip:
+        packages: [nanobind]
+    jammy:
       pip:
         packages: [nanobind]
 nanoflann:
