add clips_vendor to index of current distros

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -1374,6 +1374,12 @@ repositories:
       url: https://github.com/4am-robotics/cob_common.git
       version: foxy
     status: maintained
+  clips_vendor:
+    source:
+      type: git
+      url: https://github.com/carologistics/clips_vendor.git
+      version: main
+    status: maintained
   color_names:
     doc:
       type: git
