--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -901,6 +901,12 @@ repositories:
       url: https://github.com/MetroRobots/classic_bags.git
       version: main
     status: developed
+  clips_vendor:
+    source:
+      type: git
+      url: https://github.com/carologistics/clips_vendor.git
+      version: main
+    status: maintained
   color_names:
     doc:
       type: git
