rosdep: Add libexif and libexif-dev

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -3503,6 +3503,32 @@ libevent-dev:
   opensuse: [libevent-devel]
   rhel: [libevent-devel]
   ubuntu: [libevent-dev]
+libexif:
+  alpine: [libexif]
+  arch: [libexif]
+  debian: [libexif12]
+  fedora: [libexif]
+  gentoo: [media-libs/libexif]
+  nixos: [libexif]
+  opensuse: [libexif]
+  osx:
+    homebrew:
+      packages: [libexif]
+  rhel: [libexif]
+  ubuntu: [libexif12]
+libexif-dev:
+  alpine: [libexif-dev]
+  arch: [libexif]
+  debian: [libexif-dev]
+  fedora: [libexif-devel]
+  gentoo: [media-libs/libexif]
+  nixos: [libexif]
+  opensuse: [libexif]
+  osx:
+    homebrew:
+      packages: [libexif]
+  rhel: [libexif-devel]
+  ubuntu: [libexif-dev]
 libexpat1-dev:
   arch: [expat]
   debian: [libexpat1-dev]
