--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -7400,6 +7400,11 @@ repositories:
       type: git
       url: https://github.com/ajtudela/slg_msgs.git
       version: main
+    release:
+      tags:
+        release: release/rolling/{package}/{version}
+      url: https://github.com/ros2-gbp/slg_msgs-release.git
+      version: 3.9.1-1
     source:
       type: git
       url: https://github.com/ajtudela/slg_msgs.git
