--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -5792,6 +5792,23 @@ python3-ezdxf:
     focal:
       pip:
         packages: [ezdxf]
+python3-fabric:
+  alpine: [fabric]
+  arch: [fabric]
+  debian: [python3-fabric]
+  fedora: [python3-fabric]
+  gentoo:
+    pip:
+      packages: [fabric]
+  nixos: [Fabric]
+  opensuse: [python-fabric]
+  osx: [fabric]
+  rhel:
+    '*': [python3-fabric]
+    '8':
+      pip:
+        packages: [fabric]    
+  ubuntu: [python3-fabric]
 python3-falcon:
   arch: [python-falcon]
   debian: [python3-falcon]
