--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -4881,7 +4881,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-perception/perception_pcl.git
-      version: ros2
+      version: jazzy
     release:
       packages:
       - pcl_conversions
@@ -4895,7 +4895,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/ros-perception/perception_pcl.git
-      version: ros2
+      version: jazzy
     status: maintained
   performance_test:
     doc:
