--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -8,6 +8,12 @@ release_platforms:
   ubuntu:
   - jammy
 repositories:
+  zed-ros2-interfaces:
+    source:
+      type: git
+      url: https://github.com/stereolabs/zed-ros2-interfaces.git
+      version: humble
+    status: maintained
   aandd_ekew_driver_py:
     doc:
       type: git
