--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -4881,7 +4881,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-perception/perception_pcl.git
-      version: ros2
+      version: jazzy
     release:
       packages:
       - pcl_conversions
@@ -4890,12 +4890,12 @@ repositories:
       tags:
         release: release/jazzy/{package}/{version}
       url: https://github.com/ros2-gbp/perception_pcl-release.git
-      version: 2.6.1-4
+      version: 2.6.2-1
     source:
       test_pull_requests: true
       type: git
       url: https://github.com/ros-perception/perception_pcl.git
-      version: ros2
+      version: jazzy
     status: maintained
   performance_test:
     doc:
