--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -7837,6 +7837,10 @@ python3-piexif:
   fedora: [python3-piexif]
   opensuse: [python3-piexif]
   ubuntu: [python3-piexif]
+python3-pigpio:
+  debian: [python3-pigpio]
+  fedora: [python3-pigpio]
+  ubuntu: [python3-pigpio]
 python3-pika:
   debian: [python3-pika]
   fedora: [python3-pika]
