--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -5555,6 +5555,7 @@ repositories:
       - rmf_ingestor_msgs
       - rmf_lift_msgs
       - rmf_obstacle_msgs
+      - rmf_reservation_msgs
       - rmf_scheduler_msgs
       - rmf_site_map_msgs
       - rmf_task_msgs
@@ -5563,7 +5564,7 @@ repositories:
       tags:
         release: release/rolling/{package}/{version}
       url: https://github.com/ros2-gbp/rmf_internal_msgs-release.git
-      version: 3.4.0-1
+      version: 3.4.1-1
     source:
       type: git
       url: https://github.com/open-rmf/rmf_internal_msgs.git
