Add `psmisc` to `rosdep/base.yaml`

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -7803,6 +7803,17 @@ ps-engine:
   debian: [ps-engine]
   fedora: [openni-primesense]
   ubuntu: [ps-engine]
+psmisc:
+  arch: [psmisc]
+  debian: [psmisc]
+  fedora: [psmisc]
+  freebsd: [psmisc]
+  gentoo: [sys-process/psmisc]
+  nixos: [psmisc]
+  openembedded: [psmisc@openembedded-core]
+  opensuse: [psmisc]
+  rhel: [psmisc]
+  ubuntu: [psmisc]
 pstoedit:
   arch: [pstoedit]
   debian: [pstoedit]
